--- a/css/style.css
+++ b/css/style.css
@@ -148,3 +148,178 @@ header{
     line-height: 1;
     font-weight: 600;
 }
+
+#compraya{
+    margin: 0px;
+    background: #de0108;
+    color: #fff;
+    width: 35%;
+    text-shadow: none;
+    padding: 16px 24px;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+
+}
+
+#compraya:hover{
+    background: #750004;
+}
+
+#compraya a{
+    color: #fff;
+    font-size: medium;
+    font-style: normal;
+    line-height: 16px;
+    text-decoration: none;
+}
+
+form{
+    top:-100px;
+    position: relative;
+    z-index: 1;
+    flex: 60%;
+    margin: 10px;
+    box-shadow: 0 0 10px #969696;
+    background: #fff;
+    height: auto;
+    border-radius: 5px 5px 5px 5px;
+    margin-left: 15px;
+
+}
+
+fieldset{
+    display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 0px;
+    margin-top: 20px;
+    margin-bottom: 0px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+}
+
+legend{
+    margin-bottom: 10px;
+}
+
+legend h3{
+    font-size: 1.25rem;
+    line-height: 32px;
+    font-weight: 900;
+    color: #323237;
+}
+.completar{
+    display: flex;
+}
+
+.form-control{
+    font-size: 1.125rem;
+    line-height: 24px;
+    height: 34px;
+    padding: 0;
+    transition: all .3s ease-out;
+    background: no-repeat center bottom,center calc(99%);
+    background-image: linear-gradient(0,#007aa6 2px,rgba(63,81,181,0) 0),linear-gradient(0,#969696 1px,transparent 0);
+    background-size: 0 100%,100% 110%;
+    box-shadow: none;
+    border-radius: 0;
+    text-overflow: ellipsis;
+    width: 40%;
+    display: flex;
+    margin-right: 10px;
+
+}
+input:focus, input.form-control:focus {
+
+    outline:none !important;
+    outline-width: 0 !important;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+}
+
+.pie-form{
+    
+    background-color: #f3f2f2;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-left: 10px;
+    border-radius: 0 0 5px 5px;
+    display: flex;
+}
+.fechas{
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+    width: 50%;
+    display: flex;
+}
+
+.fechas label{
+    font-size: .875rem;
+    line-height: 16px;
+    margin-top: 0;
+    margin-bottom: 12px;
+    color: #505055;
+    position: relative;
+    transition: all .3s ease-in;
+    font-weight: bold;
+    padding-left: 32px;
+
+}
+.check-box input{
+    position: absolute;
+    cursor: pointer;
+    top: -4px;
+    left: 0;
+    width: 24px;
+    height: 24px;
+    margin: 0;
+
+}
+.buscarvuelo{
+    display: flex;
+}
+
+#buscarvuelo{
+    margin: 0px;
+    background: #de0108;
+    color: #fff;
+    width: 35%;
+    text-shadow: none;
+    padding: 16px 24px;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+
+}
+#buscarvuelo:hover{
+    background: #750004;
+}
+
+
+#buscarvuelo a{
+    color: #fff;
+    font-size: medium;
+    font-style: normal;
+    line-height: 16px;
+    text-decoration: none;
+    vertical-align: middle;
+}
+aside{
+    top:-100px;
+    flex: 32%;
+    margin: 10px;
+    background-color: #0066b2;
+    z-index: 1;
+    position: relative;
+    margin: 10px;
+    margin-right: 15px;
+}
+.imagen-aside img{
+    width: 100%;
+    height: 100%;
+}
