--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ table {
     display: flex;
     flex-wrap: wrap;
     min-width: 390px;
+  /*  background-color: #f3f2f2;*/
 
 }
 
@@ -174,8 +175,17 @@ header{
     text-decoration: none;
 }
 
+.partedos{
+   
+    top: -105px;
+    display: flex;
+    z-index: 1;
+    position: relative;
+    flex-wrap: wrap;
+
+}
 form{
-    top:-100px;
+    
     position: relative;
     z-index: 1;
     flex: 60%;
@@ -310,16 +320,141 @@ input:focus, input.form-control:focus {
     vertical-align: middle;
 }
 aside{
-    top:-100px;
+   /* top:-100px;*/
     flex: 32%;
     margin: 10px;
-    background-color: #0066b2;
+    background-color: #fff;
     z-index: 1;
     position: relative;
     margin: 10px;
     margin-right: 15px;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0 0 10px #969696;
+    color: #323237;
+    text-align: center;
 }
 .imagen-aside img{
     width: 100%;
     height: 100%;
+    border-radius: 5px 5px  0  0;
+}
+
+.descripcion{
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
+    margin-bottom: 8px;
+}
+
+.descripcion h3{
+    font-size: 1.50rem;
+    line-height: 1.2;
+    font-weight: 800;
+}
+
+.descripcion p{
+    margin-top: 10px;
+    line-height: 1.25;
+    text-align: justify;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.vermas{
+    display: flex;
+    margin: 0px auto;
+    background: #de0108;
+    color: #fff;
+    width: 25%;
+    text-shadow: none;
+    padding: 16px 24px;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.vermas:hover{
+    background: #750004;
+}
+
+
+.vermas a{
+    color: #fff;
+    font-size: medium;
+    font-style: normal;
+    line-height: 16px;
+    text-decoration: none;
+    vertical-align: middle;
+}
+
+.tarjetas{
+   
+    top: -111px;
+    position: relative;
+    display: flex;
+    background-color: #f3f2f2;
+    width: 100%;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    flex-direction: column;
+}
+
+.primer-texto{
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.primer-texto h2{
+    color: #1b1b1b;
+    font-size: 1.875rem;
+    line-height: 1.07;
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.contenedor-tarjetas{
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.contenedor-tarjetas a{
+    cursor: pointer;
+    font-style: normal;
+    text-decoration: none;
+}
+
+.tarjeta{
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 32px;
+    border: 2px solid #dedddd;
+    border-style: solid;
+    border-top-width: 0px;
+    border-left-width: 0px;
+    border-width: 2px;
+    margin-bottom: 16px;
+    color: #343e5b;
+}
+
+.ciudades{
+    width: 40%;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+#ciudad1{
+    margin-bottom: 8px;
+}
+
+.idayvuelta{
+    width: 30%;
+}
+
+.precio{
+    font-size: 1.3rem;
+    font-weight: bold;
 }
