--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ table {
     background-size: cover;
     width: 100%;
 }
+/*encabezado de la pagina ,lugar del logo*/
 
 header{
     overflow: hidden;
@@ -149,7 +150,7 @@ header{
     line-height: 1;
     font-weight: 600;
 }
-
+/*boton de compra*/
 #compraya{
     margin: 0px;
     background: #de0108;
@@ -322,7 +323,7 @@ input:focus, input.form-control:focus {
     line-height: 16px;
     text-decoration: none;
     vertical-align: middle;
-}
+}/* inofrmación relevante*/
 aside{
    /* top:-100px;*/
     flex: 32%;
